Closed Bug 620337 Opened 15 years ago Closed 15 years ago

TI: Inference failure when using non-int/string properties

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

Boolean property: --- var a = {}; a[true] = 1; assertEq(a["true"], 1); --- [infer failure] Missing type at #1:00004 popped 0: Object:prototype:new Or with a double index: --- var a = []; a[1.1] = 2; assertEq(a["1.1"], 2); --- [infer failure] Missing type at #1:00005 popped 0: Array:prototype:new
Oops, we were handling reads of non-integer primitive properties correctly, but not writes. http://hg.mozilla.org/projects/jaegermonkey/rev/cc75bc35dfba
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.