[INFER] Monitor writes of non-integer primitive properties, bug 620337.